# spsgenai

./: .gitignore  pyproject.toml
app/: bigram_model.py  main.py
